# Ascend-MindIE-Motor

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  contributing.md  security.md
mindie_motor/src/controller/: CMakeLists.txt  Controller.cpp  Controller.h  main.cpp
mindie_motor/src/controller/alarm_manager/: AlarmManager.cpp  AlarmManager.h
mindie_motor/src/controller/ccae_reporter/: CCAEReporter.cpp  CCAEReporter.h
mindie_motor/src/controller/cluster_grpc/: ClusterClient.cpp  ClusterClient.h
mindie_motor/src/controller/cluster_status/: CCAEStatus.cpp  CCAEStatus.h  ClusterStatusWriter.cpp  ClusterStatusWriter.h  CoordinatorStore.cpp  CoordinatorStore.h  NodeStatus.h
mindie_motor/src/controller/common/: DpGroupingUtil.cpp  DpGroupingUtil.h
mindie_motor/src/controller/constant/: ControllerConfig.cpp  ControllerConstant.cpp  ControllerConstant.h
mindie_motor/src/controller/fault_manager/: FaultHandler.cpp  FaultHandler.h  FaultManager.cpp  InstanceRecoveryTimer.h  NPURecoveryManager.cpp  NPURecoveryManager.h  ScaleInTimer.h
mindie_motor/src/controller/json_file_loader/: JsonFileLoader.cpp  JsonFileLoader.h
mindie_motor/src/controller/leader_judge/: ControllerLeaderAgent.cpp  ControllerLeaderAgent.h
mindie_motor/src/controller/node_manager_sender/: NodeManagerRequestSender.h
mindie_motor/src/controller/node_scheduler/: NodeScheduler.cpp  NodeScheduler.h
mindie_motor/src/controller/probe_server/: ProbeServer.cpp  ProbeServer.h
mindie_motor/src/controller/process_manager/: ProcessManager.cpp  ProcessManager.h
mindie_motor/src/controller/request_handler/: AlarmRequestHandler.cpp  AlarmRequestHandler.h  CCAERequestHandler.cpp  CCAERequestHandler.h  CoordinatorBackupHandler.cpp  CoordinatorBackupHandler.h  CoordinatorRequestHandler.cpp  CoordinatorRequestHandler.h  ServerRequestHandler.cpp  ServerRequestHandler.h
mindie_motor/src/controller/resource_manager/: ResourceManager.cpp  ResourceManager.h
mindie_motor/src/controller/role_manager/: InstanceRoleManager.cpp  InstanceRoleManager.h  LlamaSimulator.cpp  LlamaSimulator.h  ProportionCalculator.cpp  ProportionCalculator.h  SimulationCalculator.cpp  SimulationCalculator.h
mindie_motor/src/controller/status_updater/: StatusUpdater.h
mindie_motor/src/coordinator/: CMakeLists.txt  Coordinator.cpp  Coordinator.h  main.cpp
mindie_motor/src/coordinator/alarm/: AlarmRequestHandler.cpp  AlarmRequestHandler.h
mindie_motor/src/coordinator/cluster_monitor/: ClusterNodes.cpp  ClusterNodes.h
mindie_motor/src/coordinator/configure/: Configure.cpp  Configure.h
mindie_motor/src/coordinator/controller_listener/: ControllerListener.cpp  ControllerListener.h
mindie_motor/src/coordinator/digs_scheduler/: digs_scheduler_impl.h  global_scheduler.cpp  global_scheduler.h  meta_resource.cpp  meta_resource.h
mindie_motor/src/coordinator/leader_judge/: CoordinatorLeaderAgent.cpp  CoordinatorLeaderAgent.h
mindie_motor/src/coordinator/metrics/: MetricListener.cpp  MetricListener.h  Metrics.cpp  Metrics.h
mindie_motor/src/coordinator/request/: digs_request.cpp  digs_request.h  req_schedule_info.h  request_manager.cpp  request_manager.h  request_profiler.cpp  request_profiler.h
mindie_motor/src/coordinator/request_listener/: RequestListener.cpp  RequestListener.h
mindie_motor/src/coordinator/request_monitor/: ExceptionMonitor.cpp  ExceptionMonitor.h  HealthMonitor.cpp  PerfMonitor.cpp  PerfMonitor.h  ReqAgent.h  RequestMgr.h  RequestMonitor.h
mindie_motor/src/coordinator/request_repeater/: RequestRepeater.cpp  RequestRepeater.h
mindie_motor/src/coordinator/resource/: res_schedule_info.cpp  res_schedule_info.h  resource_info.cpp  resource_info.h  resource_load.cpp  resource_load.h  resource_manager.cpp  resource_manager.h  resource_view_manager.cpp  resource_view_manager.h
mindie_motor/src/coordinator/scheduler/: BaseScheduler.h  SchedulerFactory.cpp  SchedulerFactory.h
mindie_motor/src/http_client_ctl/: CMakeLists.txt  build.sh  main.cpp
mindie_motor/src/http_client_ctl/common/: DynamicConfigHandler.cpp  DynamicConfigHandler.h  Util.cpp  Util.h
mindie_motor/src/http_client_ctl/config/: http_client_ctl.json
mindie_motor/src/http_client_ctl/http_client/: HttpClient.cpp  HttpClient.h
mindie_motor/src/http_client_ctl/log/: LogLevelDynamicHandler.cpp  LogLevelDynamicHandler.h  Logger.cpp  Logger.h  LoggerDef.h
mindie_motor/src/http_client_ctl/params/: ConfigParams.cpp  ConfigParams.h
mindie_motor/src/http_client_ctl/scripts/: check_npu_status.py  file_util.py  get_distribute_role.py  get_group_id.py  get_mies_mgmt_port.py  probe.sh
mindie_motor/src/test/llt/: CMakeLists.txt
mindie_service/management_service/: CMakeLists.txt
mindie_service/management_service/common/digs/: parse_json.cpp
mindie_service/management_service/common/http_server/: HttpServer.cpp
mindie_service/management_service/common/leader_judge/: LeaderAgent.cpp
mindie_service/management_service/common/securityutils/: SecurityUtils.cpp
mindie_service/management_service/config/: ms_coordinator.json
mindie_service/management_service/controller/cluster_status/: NodeStatus.cpp
mindie_service/management_service/controller/constant/: ControllerConfig.h
mindie_service/management_service/controller/fault_manager/: FaultManager.cpp  FaultManager.h
mindie_service/management_service/controller/json_file_loader/: JsonFileLoader.cpp
mindie_service/management_service/controller/node_manager_sender/: NodeManagerRequestSender.cpp
mindie_service/management_service/controller/node_scheduler/: NodeScheduler.cpp
mindie_service/management_service/controller/request_handler/: CCAERequestHandler.cpp  CoordinatorBackupHandler.cpp  CoordinatorRequestHandler.cpp  ServerRequestHandler.cpp
mindie_service/management_service/controller/status_updater/: StatusUpdater.cpp
mindie_service/management_service/coordinator/cluster_monitor/: ClusterNodes.cpp
mindie_service/management_service/coordinator/configure/: Configure.cpp
tests/ms/dt/: CMakeLists.txt
tests/ms/dt/ipc/: CMakeLists.txt
tests/ms/fuzz/: CMakeLists.txt
(+357 files in other folders)
